<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_firstscreen"
    tools:context=".screen.FirstActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline_horizontal" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/rounded_text"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="16dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical2"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical"
            app:layout_constraintTop_toBottomOf="@id/iv_photo" />

        <EditText
            android:id="@+id/et_palindrome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_text"
            android:hint="@string/palindrome"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="16dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical2"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical"
            app:layout_constraintTop_toBottomOf="@+id/et_name" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/rounded_button"
            android:text="@string/btn_check"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/button_next"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical2"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical"
            app:layout_constraintTop_toBottomOf="@+id/et_palindrome" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_button"
            android:text="@string/btn_next"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical2"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical"
            app:layout_constraintTop_toBottomOf="@id/button_check" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>